--- a/style.css
+++ b/style.css
@@ -1,66 +1,63 @@
-body {
-    font-family: sans-serif;
-    margin: 0px auto;
-    /* height: 100%; */
+* {
+  margin: 0px;
+  padding: 0px;
+  text-decoration: none;
+  list-style: none;
+  font-family:"Poppins";
 }
 
+body {
+    margin: 0px auto;
+}
 
+@keyframes slidein {
+  from {
+    margin-bottom: 100%;
+  }
+  to {
+    margin-bottom: 0%;
+  }
+}
 /* Header */
 .header {
-  height: 80px;
+  height: 65px;
   width: 100%;
-  background-color: #2FA4FF;
+  background-color: #082B59;
   position: fixed;
   top: 0;
   z-index: 10;
 }
 
 .logo {
-  font-size: 35px;
-  margin-top: 20px;
   margin-left: 35px;
   color: white;
+  float: left;
+  padding-top:5px;
+  width: 120px;
+  height:50px;
 }
 
 .header li {
-    list-style: none;
-    float: right;
-    padding: 15px;
-    padding-top: 20px;
+  list-style: none;
+  color: white;
+  padding-right: 30px;
+  float:left;
 }
-  .header-left {
-    float: left;
-  }
   
-  .header-list {
-    float: right;
-    margin-right: 35px;
-    /* background-color: rgba(255, 255, 255, 0.3); */
-    /* transition: all 0.5s;s */
-  }
-  
-  /* .header-right:hover {
-    background-color: rgba(255, 255, 255, 0.5);
-  } */
-  
-  /* .header-right a {
-    line-height: 65px;
-    padding: 0 25px;
-    color: white;
-    display: block;
-  } */
+.header-list {
+  float: right;
+  margin-right: 35px;
+  color:white;
+  line-height:65px;
+}
 
-  .btn {
-    padding: 15px 30px;
-    color: white;
-    /* display: inline-block; */
-    /* opacity: 0.8; */
-    /* border-radius: 4px; */
-  }
+.btn {
+  color: white;
+}
 
-  .btn:hover {
-    opacity: 1;
-    color:#0E185F;
+.btn:hover {
+  opacity: 1;
+  color:#2FA4FF;
   }
 
 /* Main */
@@ -70,6 +67,8 @@ body {
   background-size: cover;
   text-align: center;
   color: white;
+  animation-name: slidein;
+  animation-duration: 4s;
 }
 
 .main h1 {
@@ -78,14 +77,58 @@ body {
 }
 
 .contents {
-  padding: 40px 80px;
+  padding: 100px 80px;
   text-align: center;
   
 }
 
 .who {
-  padding-bottom: 10px;
+  padding-bottom: 50px;
 }
+
+
+/* Body */
+.lesson-wrapper {
+  padding:50px 80px 0px 80px;
+  background-color: white;
+  text-align: center;
+  background-color: #FB5607;
+  height: 500px;
+}
+
+.heading h1 {
+  color: white;
+}
+
+.lesson {
+  float: left;
+  width: 21%;
+  text-align: center;
+  background-color: white;
+  border-radius: 8px;
+  margin: 20px 20px;
+  height: 350px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.3);
+}
+
+.lesson-icon img {
+  height: 110px;
+}
+
+.lesson-icon p {
+  width: 100%;
+  color: black;
+  font-size: 17px;
+  padding-top: 20px;
+}
+
+.txt-contents {
+  width: 80%;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 12px;
+}
+
 
   /* Product */
 .product {
@@ -97,30 +140,128 @@ body {
     width: 25%;
     text-align: center;
     padding: 40px 0;
-    height: 170px;
 }
 
 .product-item img {
     height:50px;
 }
 
-.product-item p {
-    padding: 0 40px;
-    font-size: 13px;
+.product-title {
+  text-align: center;
 }
+
+
+/* Footer */
+
+.logo-footer{
+  float: left;
+  width: 120px;
+  height:50px;
+  background-color: #082B59;
+  border-radius: 8px;
+  margin-bottom: 30px;
+}
+.right {
+  float: right;
+  margin: 10px;
+  width: 450px;
+  height:275px;
+  border-radius:8px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.3);
+}
+
+.footer-title {
+  padding-bottom: 30px;
+}
+
+.footer-text {
+  margin-top: 80px;
+}
+
+.footer{
+  margin: 100px 0px;
+  padding: 0px 80px;
+}
+
+.text-list {
+  float: left;
+  margin-right: 40px;
+}
+
+
+
 
 /* Untuk Tablet */
 @media all and (max-width: 1000px) {
-    .product-item {
-        width:50%;
-    }
-  }
-  
-  /* Untuk Smartphone */
-  @media all and (max-width: 670px) {
-      .product-item {
-          width: 100%;
-      }
+  .product-item {
+      width:50%;
   }
 
-/* Footer */
+  .lesson {
+    float: left;
+    width: 42%;
+    text-align: center;
+    background-color: white;
+    border-radius: 8px;
+    margin: 20px 20px;
+    height: 350px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.3);
+  }
+
+  .lesson-wrapper {
+    padding:50px 80px 0px 80px;
+    background-color: white;
+    text-align: center;
+    background-color: #FB5607;
+    height: 1000px;
+  }
+  .right {
+    float: right;
+    margin: 10px;
+    width: 30vw;
+    border-radius:8px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+  }
+  
+  
+}
+
+/* Untuk Smartphone */
+@media all and (max-width: 670px) {
+    .product-item {
+        width: 100%;
+    }
+
+    .lesson {
+      float: left;
+      width: 100%;
+      text-align: center;
+      background-color: white;
+      border-radius: 8px;
+      margin: 20px 20px;
+      height: 350px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+    }
+  
+    .lesson-wrapper {
+      padding:50px 80px 0px 80px;
+      background-color: white;
+      text-align: center;
+      background-color: #FB5607;
+      height: 1800px;
+    }
+
+    .right {
+      float: right;
+      margin: 10px;
+      width: 30vw;
+      border-radius:8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+    }
+
+    .text-list {
+      font-size:10px;
+    }
+
+
+}
