--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ body {
   }
 }
 /* Header */
+
+
 .header {
   height: 65px;
   width: 100%;
@@ -27,6 +29,7 @@ body {
   top: 0;
   z-index: 10;
 }
+
 
 .logo {
   margin-left: 35px;
@@ -43,7 +46,18 @@ body {
   padding-right: 30px;
   float:left;
 }
-  
+ 
+.menu-icon {
+  color: white;
+  float: right;
+  font-size: 25px;
+  padding: 20px 10px;
+  display: none;
+}
+.container .menu-icon {
+  display: none;
+}
+
 .header-list {
   float: right;
   margin-right: 35px;
@@ -59,6 +73,7 @@ body {
   opacity: 1;
   color:#2FA4FF;
   }
+
 
 /* Main */
 .main {
@@ -192,7 +207,7 @@ body {
 
 
 /* Untuk Tablet */
-@media all and (max-width: 1000px) {
+@media all and (max-width: 768px) {
   .product-item {
       width:50%;
   }
@@ -227,7 +242,15 @@ body {
 }
 
 /* Untuk Smartphone */
-@media all and (max-width: 670px) {
+@media all and (max-width: 480px) {
+  .header-list {
+    display: none
+  }
+
+  .container .menu-icon {
+    display:  block;
+  }
+  
     .product-item {
         width: 100%;
     }
@@ -252,9 +275,9 @@ body {
     }
 
     .right {
-      float: right;
+      float : left;
       margin: 10px;
-      width: 30vw;
+      width: 50vw;
       border-radius:8px;
       box-shadow: 0 0 10px rgba(0,0,0,0.3);
     }
